--- a/KinectMathGames/Gui/VelocityWindow.xaml
+++ b/KinectMathGames/Gui/VelocityWindow.xaml
@@ -5,83 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KinectMathGames"
         mc:Ignorable="d"
-        Title="Velocity Game" Height="450" Width="800"  WindowStartupLocation="CenterOwner" WindowState="Maximized">
+        Title="Velocity Game" Height="450" Width="800" WindowStartupLocation="CenterOwner" MinWidth="650" MinHeight="400" WindowState="Maximized">
     <Viewbox>
-        <Grid>
-            <Image Source="../Images/Graph.jpg" Margin="-1203,-287,1203,286.667"/>
-            <Canvas Name="MyCanvas" Focusable="True" >
-                <Ellipse Name="rec1" Tag="cursor" Width="10" Height="10" Margin="0" Canvas.Left="251" Canvas.Top="136">
-                    <Ellipse.Fill>
-                        <SolidColorBrush Color="Black" />
-                    </Ellipse.Fill>
-                </Ellipse>
-
-                <Line X1="0" Y1="0" X2="0" Y2="280" Stroke="Black" StrokeThickness="2" Canvas.Left="256" Canvas.Top="0"/>
-                <Line X1="300" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="2" Canvas.Top="143" Canvas.Left="106"/>
-
-                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="116" Canvas.Left="251"/>
-                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="90" Canvas.Left="251"/>
-                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="64" Canvas.Left="251"/>
-                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="38" Canvas.Left="251"/>
-                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="12" Canvas.Left="251"/>
-
-
-                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="168" Canvas.Left="251"/>
-                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="194" Canvas.Left="251"/>
-                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="220" Canvas.Left="251"/>
-                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="246" Canvas.Left="251"/>
-                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="272" Canvas.Left="251"/>
-
-                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="229" Canvas.Top="139"/>
-                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="203" Canvas.Top="139"/>
-                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="177" Canvas.Top="139"/>
-                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="152" Canvas.Top="139"/>
-                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="126" Canvas.Top="139"/>
-
-                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="281" Canvas.Top="139"/>
-                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="307" Canvas.Top="139"/>
-                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="333" Canvas.Top="139"/>
-                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="359" Canvas.Top="139"/>
-                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="385" Canvas.Top="139"/>
-
-                <TextBlock FontSize="19" Canvas.Left="380" Canvas.Top="148" Height="21" Width="23">
-                5<LineBreak/>
-                </TextBlock>
-
-                <TextBlock FontSize="19" Canvas.Left="234" Height="25" Width="23">
-                5<LineBreak/>
-                </TextBlock>
-
-                <TextBlock FontSize="19" Canvas.Left="225" Canvas.Top="259" Height="35" Width="26" RenderTransformOrigin="0.308,2.003">
-                -5<LineBreak/>
-                </TextBlock>
-
-                <TextBlock FontSize="19" Canvas.Left="113" Canvas.Top="148" Height="35" Width="26" RenderTransformOrigin="0.308,2.003">
-                -5<LineBreak/>
-                </TextBlock>
-
-                <Image Height="80" Width="20" Source="../Images/Gate.png" Tag="obs1" Canvas.Left="403" Canvas.Top="103" RenderTransformOrigin="1.517,0.432" />
-                <Image Height="80" Width="20" Source="../Images/Gate.png" Tag="obs2" Canvas.Left="621" Canvas.Top="30" RenderTransformOrigin="0.667,-0.27" />
-                <Image Height="80" Width="20" Source="../Images/Gate.png" Tag="obs3" Canvas.Left="796" Canvas.Top="210" RenderTransformOrigin="0.567,-0.373" />
-
-
-                <Label Name="txtscore" FontSize="20" FontWeight="Bold" Content="Score: 0" RenderTransformOrigin="5.441,1.98" Canvas.Top="37"  Canvas.Left="-104"/>
-                <Label Name="VelocityText" FontSize="20" FontWeight="ExtraBold" Content="Velocity Game"  Canvas.Left="-104" RenderTransformOrigin="0.666,0.635"/>
-                <Label x:Name="WinText" Content="" Canvas.Left="10" Canvas.Top="42" Height="168" Width="386" FontSize="20" FontWeight="ExtraBold"/>
-                <Button x:Name="ResetButton" Content="reset" HorizontalAlignment="Left" VerticalAlignment="Top" Width="25" Height="14" FontSize="7" Click="ResetButton_Click" Canvas.Left="-73" Canvas.Top="255"/>
-                <Button x:Name="BackButton" Content="Back" Canvas.Left="-98" Canvas.Top="255" Width="25" Height="14" FontSize="7" Click="BackButton_Click"/>
-                <Button x:Name="PauseButton" Content="Pause" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="25" Height="14" FontSize="7" Canvas.Left="-32" Canvas.Top="255" Click="PauseButton_Click"/>
-            </Canvas>
-            <TextBlock x:Name="instructions" HorizontalAlignment="Left" Margin="-94,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="145" Width="194" FontSize="7.5" RenderTransformOrigin="-0.043,1.625"><Run Text="&#x9;              &#x9;          ">
+        <Grid Width="238" Height="126">
+            <TextBlock Name="txtscore" FontWeight="Bold" Text="Score: 0" TextAlignment="Center" Typography.Fraction="Stacked" FontSize="10" Margin="133,5,5,110"/>
+            <TextBlock Name="VelocityText" FontWeight="ExtraBold" Text="Velocity Game" TextAlignment="Center" Typography.Fraction="Stacked" FontSize="10" Margin="5,5,110,107" Grid.ColumnSpan="2"/>
+            <Button Name="QuitButton" Content="Quit" Margin="5,108,0,5" Click="BackButton_Click" FontSize="7" FontWeight="Bold" HorizontalAlignment="Left" Width="27"/>
+            <Button Name="StartResetButton" Content="Start" HorizontalAlignment="Right" Margin="0,108,149,5" Width="52" Click="StartResetButton_Click" FontSize="7" FontWeight="Bold"/>
+            <Button Name="PauseButton" Content="Settings" HorizontalAlignment="Right" Margin="0,108,110,5" Width="34" Click="PauseButton_Click" FontSize="7" FontWeight="Bold"/>
+            <TextBlock x:Name="instructions" Margin="5,21,110,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="78" FontSize="4.5" RenderTransformOrigin="-0.043,1.625" TextAlignment="Justify"><Run Text="&#x9;              &#x9;          ">
                     <Run.Background>
                         <ImageBrush/>
                     </Run.Background>
-                </Run><Run FontWeight="Bold" Text="THE GOAL">
+                </Run><Run FontWeight="Bold">
                     <Run.Background>
                         <ImageBrush/>
                     </Run.Background>
-                </Run><LineBreak/><Run Text="■    Get to 20 points by moving the cursor through ">
-                </Run><LineBreak/><Run Text="       the gates">
+                </Run><LineBreak/><Run FontWeight="Bold" Text="&#x9;&#x9;          THE GOAL">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                </Run><LineBreak/><Run Text="■    Get to 20 points by moving the cursor through "/><LineBreak/><Run Text="       the gates">
                     <Run.Background>
                         <ImageBrush/>
                     </Run.Background>
@@ -117,12 +61,54 @@
                     <Run.Background>
                         <ImageBrush/>
                     </Run.Background>
-                
-                   
                 </Run></TextBlock>
-            <TextBlock Name="textBlock" HorizontalAlignment="Left" Margin="-94,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="145" Width="194" FontSize="8"/>
+            <TextBlock x:Name="WinText" Margin="5,21,110,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="60" FontSize="6" RenderTransformOrigin="-0.043,1.625"/>
+            <Viewbox Width="100" Height="100" Margin="133,21,5,5">
+                <Canvas Name="MyCanvas" Width="1000" Height="1000" Focusable="True" ClipToBounds="True">
+                    <Canvas>
+                        <Line X1="0" X2="1000" Y1="500" Y2="500" Stroke="Black" StrokeThickness="10" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="500" X2="500" Y1="0" Y2="1000" Stroke="Black" StrokeThickness="10" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="0" X2="0" Y1="480" Y2="520" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="100" X2="100" Y1="480" Y2="520" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="200" X2="200" Y1="480" Y2="520" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="300" X2="300" Y1="480" Y2="520" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="400" X2="400" Y1="480" Y2="520" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="600" X2="600" Y1="480" Y2="520" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="700" X2="700" Y1="480" Y2="520" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="800" X2="800" Y1="480" Y2="520" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="900" X2="900" Y1="480" Y2="520" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="1000" X2="1000" Y1="480" Y2="520" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
 
-
+                        <Line X1="480" X2="520" Y1="0" Y2="0" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="480" X2="520" Y1="100" Y2="100" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="480" X2="520" Y1="200" Y2="200" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="480" X2="520" Y1="300" Y2="300" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="480" X2="520" Y1="400" Y2="400" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="480" X2="520" Y1="600" Y2="600" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="480" X2="520" Y1="700" Y2="700" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="480" X2="520" Y1="800" Y2="800" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="480" X2="520" Y1="900" Y2="900" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Line X1="480" X2="520" Y1="1000" Y2="1000" Stroke="Black" StrokeThickness="5" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                        <Label Content="-4" FontSize="60" HorizontalAlignment="Center" VerticalAlignment="Center" Canvas.Left="404" Canvas.Top="855"/>
+                        <Label Content="4" FontSize="60" HorizontalAlignment="Center" VerticalAlignment="Center" Canvas.Left="428" Canvas.Top="57"/>
+                        <Label Content="2" FontSize="60" HorizontalAlignment="Center" VerticalAlignment="Center" Canvas.Left="427" Canvas.Top="256"/>
+                        <Label Content="-2" FontSize="60" HorizontalAlignment="Center" VerticalAlignment="Center" Canvas.Left="404" Canvas.Top="655"/>
+                    </Canvas>
+                    <Canvas>
+                        <Ellipse Name="rec1" Width="60" Height="60" Canvas.Left="470" Canvas.Top="470" SnapsToDevicePixels="True" Panel.ZIndex="3" Fill="#FFFF6600"/>
+                        <Line Name="playerHitLine" X1="470" X2="530" Y1="500" Y2="500" SnapsToDevicePixels="True" Panel.ZIndex="4" Stretch="Fill" Canvas.Left="467" Canvas.Top="497"/>
+                    </Canvas>
+                    <Line Name="obs1HitLine" Tag="obs1" X1="600" X2="600" Y1="425" Y2="575" SnapsToDevicePixels="True" Stretch="Fill"/>
+                    <Polygon Name="obs1Top" Points="0,0 25,50 50,0" Fill="Yellow" Canvas.Left="1949" Canvas.Top="602" Stroke="Black" StrokeThickness="5" />
+                    <Polygon Name="obs1Bottom" Points="0,50 25,0 50,50" Fill="Yellow" Canvas.Left="1964" Canvas.Top="856" Stroke="Black" StrokeThickness="5"/>
+                    <Line Name="obs2HitLine" Tag="obs2" X1="700" X2="700" Y1="425" Y2="575" SnapsToDevicePixels="True" Stretch="Fill"/>
+                    <Polygon Name="obs2Top" Points="0,0 25,50 50,0" Fill="Yellow" Canvas.Left="1413" Canvas.Top="588" Stroke="Black" StrokeThickness="5"/>
+                    <Polygon Name="obs2Bottom" Points="0,50 25,0 50,50" Fill="Yellow" Canvas.Left="1427" Canvas.Top="822" Stroke="Black" StrokeThickness="5"/>
+                    <Line Name="obs3HitLine" Tag="obs3" X1="800" X2="800" Y1="425" Y2="575" SnapsToDevicePixels="True"  Stretch="Fill"/>
+                    <Polygon Name="obs3Top" Points="0,0 25,50 50,0" Fill="Yellow" Canvas.Left="1773" Canvas.Top="352" Stroke="Black" StrokeThickness="5"/>
+                    <Polygon Name="obs3Bottom" Points="0,50 25,0 50,50" Fill="Yellow" Canvas.Left="1771" Canvas.Top="556" Stroke="Black" StrokeThickness="5"/>
+                </Canvas>
+            </Viewbox>
         </Grid>
     </Viewbox>
 </Window>
