--- a/KinectMathGames/Gui/VelocitySettingsDialog.xaml
+++ b/KinectMathGames/Gui/VelocitySettingsDialog.xaml
@@ -2,7 +2,7 @@
         xmlns:local="clr-namespace:KinectMathGames"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Settings" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterOwner">
+        Title="Velocity Game Settings" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterOwner">
     <Grid Margin="15">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
